[package]
name = "tfc-which-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
config = "0.13.1"
http-cache-surf = "0.4.6"
miette = { version = "4.7.1", features = ["fancy"] }
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
surf = "2.3.2"
thiserror = "1.0.31"
url = "2.2.2"
